# kalshi-rust

./: .gitignore  README.md  cargo.toml
kalshi/: Cargo.toml
kalshi/src/: auth.rs  lib.rs  market.rs  portfolio.rs  utils.rs  websockets.rs
kalshi/src/websockets/: client.rs  commands.rs  mod.rs  responses.rs
kalshi/test_data/: sample_markets.json  sports_series.json
