[package]
name = "kalshi"
version = "0.9.0"
authors = ["David Petre <david.petre31@gmail.com>"]
edition = "2021"
rust-version = "1.72"
description = """An HTTPS and Websocket wrapper that allows users to write 
trading bots for the Kalshi events trading platform.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/dpeachpeach/kalshi-rust"
keywords = ["finance", "trading", "kalshi", "bots"]
readme = "README.md"

[features]
default = ["websockets"]
websockets = [
    "dep:tokio",
    "dep:serde_json",
    "dep:tokio-tungstenite",
    "dep:futures-util",
]

[lib]
# We would like to eventually turn this on, but the doctests require some clean-up.
# See https://github.com/dpeachpeach/kalshi-rust/issues/7
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
serde_json = { version = "1.0.111", optional = true }
tokio-tungstenite = { version = "0.24.0", optional = true, features = [
    "native-tls",
] }
futures-util = { version = "0.3.31", optional = true }

[dev-dependencies]
serde_json = "1.0.111"
